In-browser signing support (#3231)
* Signer RAW confirmations

* Returning address book as eth_accounts

* UI support for in-browser signing

* Post review fixes

* Adding new methods to jsonrpc

* Fixing eth_accounts

* Deterministic accounts ordering

--- a/js/package.json
+++ b/js/package.json
@@ -118,6 +118,7 @@
     "bytes": "^2.4.0",
     "chart.js": "^2.3.0",
     "es6-promise": "^3.2.1",
+    "ethereumjs-tx": "^1.1.2",
     "file-saver": "^1.3.3",
     "format-json": "^1.0.3",
     "format-number": "^2.0.1",
@@ -147,6 +148,7 @@
     "redux-actions": "^0.10.1",
     "redux-thunk": "^2.1.0",
     "rlp": "^2.0.0",
+    "scryptsy": "^2.0.0",
     "store": "^1.3.20",
     "utf8": "^2.1.1",
     "validator": "^5.7.0",
