Use NPM Module for valid URL (fixes linting issue too)

--- a/js/package.json
+++ b/js/package.json
@@ -155,10 +155,11 @@
     "redux-actions": "^0.10.1",
     "redux-thunk": "^2.1.0",
     "rlp": "^2.0.0",
-    "solc": "ngotchac/solc-js",
     "scryptsy": "^2.0.0",
+    "solc": "ngotchac/solc-js",
     "store": "^1.3.20",
     "utf8": "^2.1.1",
+    "valid-url": "^1.0.9",
     "validator": "^5.7.0",
     "web3": "^0.17.0-beta",
     "whatwg-fetch": "^1.0.0",
