Enable panic=abort

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,4 +88,10 @@ name = "parity"
 [profile.release]
 debug = false
 lto = false
+panic = "abort"
 
+[profile.test]
+panic = "abort"
+
+[profile.dev]
+panic = "abort"
