--- a/js/package.json
+++ b/js/package.json
@@ -122,6 +122,7 @@
     "brace": "^0.9.0",
     "bytes": "^2.4.0",
     "chart.js": "^2.3.0",
+    "es6-error": "^4.0.0",
     "es6-promise": "^3.2.1",
     "ethereumjs-tx": "^1.1.2",
     "file-saver": "^1.3.3",
