Fixing JS tests

--- a/js/package.json
+++ b/js/package.json
@@ -102,8 +102,9 @@
     "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0",
     "raw-loader": "^0.5.1",
-    "react-addons-test-utils": "^15.3.0",
+    "react-addons-test-utils": "~15.3.2",
     "react-copy-to-clipboard": "^4.2.3",
+    "react-dom": "~15.3.2",
     "react-hot-loader": "~1.3.0",
     "rucksack-css": "^0.8.6",
     "sinon": "^1.17.4",
